<resources>
<string name="app_name">DiscoverAR</string>
<string name="create_account">Create account</string>
<string name="login_screen_login_button_text">Login</string>
<string name="login_screen_sign_up_button_text">Sign Up</string>
<string name="login_screen_dont_have_an_account">Don\'t have an account?</string>
<string name="login_screen_email_label">Email</string>
<string name="login_screen_password_label">Password</string>

<string name="sign_up_screen_first_name">First Name</string>
<string name="sign_up_screen_last_name">Last Name</string>
<string name="sign_up_screen_email_address">Email Address</string>
<string name="sign_up_screen_password">Password</string>
<string name="sign_up_screen_re_enter_password">Re-enter password</string>

<string name="title_activity_scan">MainActivity</string>
<string name="title_library">Library</string>
<string name="title_Journey">Journey</string>
<string name="title_Scan">Scan</string>
<string name="title_Settings">Settings</string>

<string name="noJourney">No Journey Selected</string>
<string name="journey_image_label">Image to track:</string>

<string name="settings_sign_out_button">Sign Out</string>

<string name="invalid_auth">Invalid Username/Email or Password</string>

<string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
</string>
</resources>