<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScanActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingVertical="52dp">
        <TextView
            android:gravity="center"
            android:layout_width="253dp"
            android:layout_height="180dp"
            android:background="@drawable/discover_ar_logo"
            android:text="Discover AR"
            android:textSize="44dp"
            android:textColor="@color/colorPrimary"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginBottom="22dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/login_screen_email_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_email_label"
                android:layout_marginHorizontal="22dp"
                android:layout_marginBottom="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/login_screen_password_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_password_label"
                android:layout_marginHorizontal="22dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/login_screen_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginBottom="8dp"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/login_screen_login_button_text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_dont_have_an_account"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/login_screen_sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_screen_sign_up_button_text"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>